peac_dev/force-app/main/default/objects/Field_Tracker__c/Field_Tracker__c.object-meta.xml
<CustomObject>
    <label>Field Tracker</label>
    <nameField>
        <displayFormat>CFT-{000000000}</displayFormat>
        <label>Credit Fields Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>