peac_dev/force-app/main/default/objects/Field_Tracker__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Label</label>
    <length>250</length>
    <type>Text</type>
</CustomField>